ViewPeep now scroll as it should when viewing a pipe

--- a/FoodPiper/FriendView.xib
+++ b/FoodPiper/FriendView.xib
@@ -99,7 +99,7 @@
                         </mask>
                     </variation>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="message" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qk5-h0-P0a" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="message" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qk5-h0-P0a" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="BHe-kO-qMf"/>
@@ -124,7 +124,7 @@
                         <action selector="sendFriendMessage:" destination="-1" eventType="touchUpInside" id="eSR-5l-0jI"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="food" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DRF-21-BF9" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="food" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DRF-21-BF9" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="McU-6v-VWS"/>
@@ -149,7 +149,7 @@
                         <action selector="inviteToMealButtonPressed:" destination="-1" eventType="touchUpInside" id="xZe-2h-2qE"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="peep" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KYX-Du-6NP" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="peep" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KYX-Du-6NP" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="70" id="Uk4-Ln-Eye"/>
@@ -174,7 +174,7 @@
                         <action selector="peepPipesButtonPressed:" destination="-1" eventType="touchUpInside" id="1ZY-nM-smM"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="remove" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jo1-V1-aH1" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="remove" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jo1-V1-aH1" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="70" id="bKU-Yi-dyz"/>
@@ -196,7 +196,7 @@
                         </mask>
                     </variation>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="pipe" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmP-Bq-7Ng" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="pipe" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmP-Bq-7Ng" customClass="FoodPiperButtons" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="PQm-13-XUX"/>
@@ -318,39 +318,39 @@
                     <exclude reference="fja-jY-0WC"/>
                 </mask>
                 <mask key="constraints">
+                    <exclude reference="9vr-uy-Mvv"/>
+                    <exclude reference="rqL-er-8Nf"/>
+                    <exclude reference="QrT-Q0-AJU"/>
+                    <exclude reference="cpx-eS-Tis"/>
+                    <exclude reference="C91-lt-mSO"/>
+                    <exclude reference="E4t-u8-mVt"/>
+                    <exclude reference="iSo-no-vLb"/>
+                    <exclude reference="xXw-5q-996"/>
+                    <exclude reference="E5m-0H-Zmu"/>
+                    <exclude reference="Jl6-KJ-0ye"/>
+                    <exclude reference="h7u-X5-Xq8"/>
+                    <exclude reference="hwv-Tg-maZ"/>
+                    <exclude reference="ca0-TN-yyE"/>
+                    <exclude reference="jYi-PP-FEb"/>
+                    <exclude reference="5i9-ps-5Cw"/>
+                    <exclude reference="OgD-cv-0sC"/>
+                    <exclude reference="9ye-D1-wtO"/>
+                    <exclude reference="tHP-dE-4Ln"/>
+                    <exclude reference="dKk-MJ-UXD"/>
+                    <exclude reference="lkC-pu-3F7"/>
+                    <exclude reference="1b2-H9-bva"/>
+                    <exclude reference="kCT-m1-HLd"/>
+                    <exclude reference="geu-nG-ufn"/>
+                    <exclude reference="iTW-H6-vV8"/>
                     <exclude reference="h8O-3t-J6r"/>
                     <exclude reference="ol8-6E-tRS"/>
                     <exclude reference="qQ0-hR-ZXq"/>
-                    <exclude reference="YYy-Am-4tC"/>
                     <exclude reference="3yO-D0-p6F"/>
                     <exclude reference="5Re-E8-PNZ"/>
                     <exclude reference="PVq-lA-5ta"/>
                     <exclude reference="Jgy-4H-Bdu"/>
                     <exclude reference="SAQ-aR-BCG"/>
-                    <exclude reference="ca0-TN-yyE"/>
-                    <exclude reference="jYi-PP-FEb"/>
-                    <exclude reference="9vr-uy-Mvv"/>
-                    <exclude reference="rqL-er-8Nf"/>
-                    <exclude reference="C91-lt-mSO"/>
-                    <exclude reference="E4t-u8-mVt"/>
-                    <exclude reference="iSo-no-vLb"/>
-                    <exclude reference="xXw-5q-996"/>
-                    <exclude reference="geu-nG-ufn"/>
-                    <exclude reference="iTW-H6-vV8"/>
-                    <exclude reference="1b2-H9-bva"/>
-                    <exclude reference="kCT-m1-HLd"/>
-                    <exclude reference="E5m-0H-Zmu"/>
-                    <exclude reference="Jl6-KJ-0ye"/>
-                    <exclude reference="QrT-Q0-AJU"/>
-                    <exclude reference="cpx-eS-Tis"/>
-                    <exclude reference="h7u-X5-Xq8"/>
-                    <exclude reference="hwv-Tg-maZ"/>
-                    <exclude reference="9ye-D1-wtO"/>
-                    <exclude reference="tHP-dE-4Ln"/>
-                    <exclude reference="5i9-ps-5Cw"/>
-                    <exclude reference="OgD-cv-0sC"/>
-                    <exclude reference="dKk-MJ-UXD"/>
-                    <exclude reference="lkC-pu-3F7"/>
+                    <exclude reference="YYy-Am-4tC"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
@@ -372,39 +372,39 @@
                     <include reference="fja-jY-0WC"/>
                 </mask>
                 <mask key="constraints">
+                    <include reference="9vr-uy-Mvv"/>
+                    <include reference="rqL-er-8Nf"/>
+                    <include reference="QrT-Q0-AJU"/>
+                    <include reference="cpx-eS-Tis"/>
+                    <include reference="C91-lt-mSO"/>
+                    <include reference="E4t-u8-mVt"/>
+                    <include reference="iSo-no-vLb"/>
+                    <include reference="xXw-5q-996"/>
+                    <include reference="E5m-0H-Zmu"/>
+                    <include reference="Jl6-KJ-0ye"/>
+                    <include reference="h7u-X5-Xq8"/>
+                    <include reference="hwv-Tg-maZ"/>
+                    <include reference="ca0-TN-yyE"/>
+                    <include reference="jYi-PP-FEb"/>
+                    <include reference="5i9-ps-5Cw"/>
+                    <include reference="OgD-cv-0sC"/>
+                    <include reference="9ye-D1-wtO"/>
+                    <include reference="tHP-dE-4Ln"/>
+                    <include reference="dKk-MJ-UXD"/>
+                    <include reference="lkC-pu-3F7"/>
+                    <include reference="1b2-H9-bva"/>
+                    <include reference="kCT-m1-HLd"/>
+                    <include reference="geu-nG-ufn"/>
+                    <include reference="iTW-H6-vV8"/>
                     <include reference="h8O-3t-J6r"/>
                     <include reference="ol8-6E-tRS"/>
                     <include reference="qQ0-hR-ZXq"/>
-                    <include reference="YYy-Am-4tC"/>
                     <include reference="3yO-D0-p6F"/>
                     <include reference="5Re-E8-PNZ"/>
                     <include reference="PVq-lA-5ta"/>
                     <include reference="Jgy-4H-Bdu"/>
                     <include reference="SAQ-aR-BCG"/>
-                    <include reference="ca0-TN-yyE"/>
-                    <include reference="jYi-PP-FEb"/>
-                    <include reference="9vr-uy-Mvv"/>
-                    <include reference="rqL-er-8Nf"/>
-                    <include reference="C91-lt-mSO"/>
-                    <include reference="E4t-u8-mVt"/>
-                    <include reference="iSo-no-vLb"/>
-                    <include reference="xXw-5q-996"/>
-                    <include reference="geu-nG-ufn"/>
-                    <include reference="iTW-H6-vV8"/>
-                    <include reference="1b2-H9-bva"/>
-                    <include reference="kCT-m1-HLd"/>
-                    <include reference="E5m-0H-Zmu"/>
-                    <include reference="Jl6-KJ-0ye"/>
-                    <include reference="QrT-Q0-AJU"/>
-                    <include reference="cpx-eS-Tis"/>
-                    <include reference="h7u-X5-Xq8"/>
-                    <include reference="hwv-Tg-maZ"/>
-                    <include reference="9ye-D1-wtO"/>
-                    <include reference="tHP-dE-4Ln"/>
-                    <include reference="5i9-ps-5Cw"/>
-                    <include reference="OgD-cv-0sC"/>
-                    <include reference="dKk-MJ-UXD"/>
-                    <include reference="lkC-pu-3F7"/>
+                    <include reference="YYy-Am-4tC"/>
                 </mask>
             </variation>
             <connections>
